# model/product.go
@@ -6,15 +6,7 @@ import (
 
 // Product model
 type Product struct {
-	gorm.Model
-	Name        string `json:"name"`
-	Description string `json:"description"`
-	Category    string `json:"category"`
-	Amount      int    `json:"amount"`
-}
-
-// ProductModel model
-type ProductModel struct {
+	gorm.Model  `swaggerignore:"true"`
 	Name        string `json:"name"`
 	Description string `json:"description"`
 	Category    string `json:"category"`
